# MyReviewAnalyzer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  database.py  deepseek.py  main.py  pyproject.toml  requirements.txt
review_analyzer/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
review_analyzer/app/: layout.tsx  page.tsx
review_analyzer/app/components/: card.tsx  searchbtn.tsx  select.tsx
review_analyzer/app/contexts/: context.tsx
