[project]
name = "my-fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "mysqlclient>=2.2.8",
    "praw>=7.8.1",
    "ratemyprofessors-client>=3.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]
